--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Location Tracker</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="config.js"></script>
-    <script type="module" src="main.js" defer></script> <!-- Ensure main.js is loaded after config.js -->
+    <script type="module" src="config.js"></script> <!-- Load configuration first -->
+    <script type="module" src="main.js" defer></script> <!-- Load main.js afterwards -->
 </head>
 <body>
     <div id="usernameOverlay">
