--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
     <h1>Live Tracking App</h1>
     <div id="welcomeMessage"></div>
+
     <div class="overlay" id="usernameOverlay">
         <h2>Please enter your name:</h2>
-        
-        <!-- Adding a label with a correct 'for' attribute -->
+
+        <!-- Updated input fields with correct id, name, and autocomplete -->
         <label for="usernameField">Username:</label>
-        <input type="text" id="usernameField" placeholder="Username">
+        <input type="text" id="usernameField" name="username" placeholder="Username" autocomplete="username">
         <button id="setUsernameButton">Set Username</button>
     </div>
-    
+
     <button id="gpsToggle" style="display: none;">Enable GPS</button>
     <div id="map"></div>
     <div class="user-list" id="userList"></div>
