--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <h1>Live Tracking App</h1>
     <div id="welcomeMessage"></div>
 
+    <!-- Username input overlay -->
     <div class="overlay" id="usernameOverlay">
         <h2>Please enter your name:</h2>
 
-        <!-- Updated input fields with correct id, name, and autocomplete -->
+        <!-- Corrected label for the input field -->
         <label for="usernameField">Username:</label>
         <input type="text" id="usernameField" name="username" placeholder="Username" autocomplete="username">
         <button id="setUsernameButton">Set Username</button>
