--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div id="map"></div>
     <div class="user-list" id="userList"></div>
 
-    <script type="module" src="main.js"></script>
+    <!-- Gebruik 'defer' om te zorgen dat het script pas na het laden van de pagina wordt uitgevoerd -->
+    <script src="main.js" defer></script>
 </body>
 </html>
