--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <h1>Live Tracking App</h1>
     <div id="welcomeMessage"></div>
 
-    <!-- Username input overlay -->
+    <!-- Username input overlay without unnecessary labels -->
     <div class="overlay" id="usernameOverlay">
         <h2>Please enter your name:</h2>
-
-        <!-- Corrected label for the input field -->
-        <label for="usernameField">Username:</label>
-        <input type="text" id="usernameField" name="username" placeholder="Username" autocomplete="username">
+        
+        <!-- Username input field -->
+        <input type="text" id="usernameField" placeholder="Enter your username" autocomplete="username">
         <button id="setUsernameButton">Set Username</button>
     </div>
 
     <button id="gpsToggle" style="display: none;">Enable GPS</button>
-    <div id="map"></div>
+    <div id="map" style="height: 70vh; width: 100%; border: 2px solid #00ff00;"></div>
     <div class="user-list" id="userList"></div>
 
-    <!-- Gebruik 'defer' om te zorgen dat het script pas na het laden van de pagina wordt uitgevoerd -->
-    <script src="main.js" defer></script>
+    <!-- Load main.js with defer to ensure DOM is loaded first -->
+    <script type="module" src="main.js" defer></script>
 </body>
 </html>
