--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <h1>Live Tracking App</h1>
     <div id="welcomeMessage"></div>
 
-    <!-- Username input overlay without unnecessary labels -->
+    <!-- Username input overlay with correct labels -->
     <div class="overlay" id="usernameOverlay">
         <h2>Please enter your name:</h2>
         
-        <!-- Username input field -->
-        <input type="text" id="usernameField" placeholder="Enter your username" autocomplete="username">
+        <!-- Correctly paired label and input for accessibility and autocomplete off -->
+        <label for="usernameField">Username:</label>
+        <input type="text" id="usernameField" placeholder="Enter your username" autocomplete="off">
+        
         <button id="setUsernameButton">Set Username</button>
     </div>
 
