--- a/index.html
+++ b/index.html
@@ -5,27 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Tracking App</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="main.js" defer></script>
 </head>
 <body>
     <h1>Live Tracking App</h1>
     <div id="welcomeMessage"></div>
-
-    <!-- Username input overlay with correct labels -->
     <div class="overlay" id="usernameOverlay">
         <h2>Please enter your name:</h2>
-        
-        <!-- Correctly paired label and input for accessibility and autocomplete off -->
-        <label for="usernameField">Username:</label>
-        <input type="text" id="usernameField" placeholder="Enter your username" autocomplete="off">
-        
+        <input type="text" id="usernameField" placeholder="Username" autocomplete="off">
         <button id="setUsernameButton">Set Username</button>
     </div>
-
     <button id="gpsToggle" style="display: none;">Enable GPS</button>
-    <div id="map" style="height: 70vh; width: 100%; border: 2px solid #00ff00;"></div>
+    <div id="map"></div>
     <div class="user-list" id="userList"></div>
-
-    <!-- Load main.js with defer to ensure DOM is loaded first -->
-    <script type="module" src="main.js" defer></script>
 </body>
 </html>
