--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="welcomeMessage"></div>
     <div class="overlay" id="usernameOverlay">
         <h2>Please enter your name:</h2>
+        <!-- Input field with a unique ID and no label -->
         <input type="text" id="usernameField" placeholder="Username" autocomplete="off">
         <button id="setUsernameButton">Set Username</button>
     </div>
